--- a/index.html
+++ b/index.html
@@ -3,31 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Evaluación módulo 2 Andrea Buezas</title>
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
+
 <body>
-    <header>
-        <h1>Buscador de Series Anime</h1>
-    </header>
+    
+  <header>
+    <h1>Buscador de Series Anime </h1>
+  </header>
+
+  <main>
+    <form action="">
+      <label for="series"></label>
+      <input type="text" class="js-input" id="series">
+
+      <button type="submit" class="js-submit-bttn">Buscar</button>
+      <button type="reset">Reset</button>
+    </form>
+
+    <section>
+      <div class="js-favourite-series"></div>
+
+      <div class="js-search-series"></div>
+    </section>
   
-    <main>
-        <form action="">
-          <label for="series"></label>
-          <input type="text"  />
-  
-          <button type="submit" >
-            Buscar
-          </button>
-          <button type="reset" >Reset</button>
-        </form>
-  
-        <section >
-          <div >
-            <h3 >
-              Series favoritas
-            </h3>
-            <button>
-              Eliminar favoritos
+    <section >
+      <div >
+        <h3> Series favoritas </h3>
+        <button> Eliminar favoritos
             </button>
             <div ></div>
           </div>
