--- a/index.html
+++ b/index.html
@@ -23,17 +23,22 @@
       <button type="reset">Reset</button>
     </form>
 
-    <section>
-      <div class="js-favourite-series"></div>
+    <section class="section">
+      <div class="favourites divs">
+        <h3 class="hidden js-title-favourites">Series favoritas</h3>
+          <div class="js-favourite-series">
 
-      <div class="js-search-series"></div>
+            
+          </div>
+      </div>
+    
+      <div class="search divs"> <div class="js-search-series"></div>
+      </div>
     </section>
   
     <section >
       <div >
-        <h3> Series favoritas </h3>
-        <button> Eliminar favoritos
-            </button>
+        <button> Eliminar favoritos </button>
             <div ></div>
           </div>
   
